<resources>
    <string name="app_name">World News</string>
    <string name="sport">Sport</string>
    <string name="football">Football</string>
    <string name="_2020_10_12">2020-10-12</string>
    <string name="time">09:00</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="author">Mirshodbek</string>
    <string name="check_internet">Please check your internet...</string>
    <string name="try_again">Try Again!</string>
    <string name="quit">Quit</string>
    <string name="checking_connection">No connected to \nthe Internet or Wifi.\nPlease check your Internet \nand Try Again.</string>
    <string name="no_data">Sorry No Data in the moment.</string>
</resources>